Updated demos